@@ -343,9 +343,7 @@ private class ReaderDetailViewMock: UIViewController, ReaderDetailView {
 
     func updateHeader() { }
 
-    func updateLikes(with avatarURLStrings: [String], totalLikes: Int) { }
-
-    func updateSelfLike(with avatarURLString: String?) { }
+    func updateLikesView(with viewModel: ReaderDetailLikesViewModel) {}
 
     func updateComments(_ comments: [Comment], totalComments: Int) { }
 
